modules/_variables.scss
@use 'sass:math';
@use 'sass:map';
@use 'functions' as *;

$use-prefix: false !default;
$prefix: '' !default;
@if $use-prefix {
	$prefix: 'p-' !default;
}

//
// TYPOGRAPHY
//
$font-family-sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans',
	'Droid Sans', 'Helvetica Neue', sans-serif !default;
$font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace !default;

$font-base: 16 !default;
$font-size-base: 1rem !default;
$font-family-base: $font-family-sans-serif !default;

$line-height-base: 1.5 !default;
$font-weight-base: 400 !default;

$dt-font-weight: 500 !default;

$headings-font-weight: 700 !default;
$headings-margin-bottom: 1rem !default;
$paragraph-margin-bottom: 1rem !default;

//
// COLORS
//

//generated on http://colormind.io/bootstrap/
// $theme-colors: (
// 	'light-shades': #faf9f9,
// 	'light-accent': #67accb,
// 	'warning': #ffc107,
// 	'brand-main': #2585ce,
// 	'dark-accent': #2665a0,
// 	'dark-shades': #162a6a,
// 	'dark': #0d0d0e,
// 	'color-green': #40a276,
// 	'color-yellow': #be923e,
// 	'color-red': #f44336,
// 	'color-grey': #313439,
// 	'color-white': #fff,
// 	'default': #676b72,
// ) !default;

$light-shades: #faf9f9 !default;
$light-accent: #67accb !default;
$brand-main: #2585ce !default;
$dark-accent: #2665a0 !default;
$dark-shades: #162a6a !default;
$dark: #0d0d0e !default;

$color-green: #40a276 !default;
$color-yellow: #be923e !default;
$color-red: #f44336 !default;

$color-grey: #313439 !default;
$color-white: #fff !default;

$default: #676b72 !default;
$primary: $brand-main !default;
$info: $dark-shades !default;
$success: $color-green !default;
$warning: $color-yellow !default;
$danger: $color-red !default;

$body-color: $dark !default;
$body-bg: $light-shades !default;
$body-bg-dark: $dark !default;

$link-color: $brand-main !default;
$link-decoration: underline !default;
$link-hover-color: lighten($brand-main, 15%) !default;
$link-hover-decoration: none !default;

$gap: 1em !default;
$gap-md: 1.5em !default;

$border-width: em(2) !default;
$border-radius: em(6) !default;

//
// FORMS
//
$input-border-color: $color-grey !default;
$input-border-color-dark: $body-bg !default;
$button-border-color: transparent !default;
$input-border-width: $border-width !default;
$button-border-width: $border-width !default;
$input-border-radius: $border-radius !default;
$button-border-radius: $border-radius !default;
$input-padding: em(6) em(12) !default; //0.375em 0.75em
$button-padding: em(6) em(24) !default; //0.375em 1.5em
$button-color: $color-white;
$label-margin-bottom: em(4) !default;
$input-margin-bottom: em(8) !default;

//
// ICONS
//

// 󰕏 https://pictogrammers.com/library/mdi/icon/unfold-more-horizontal/
$mdi-unfold-more-horizontal: 'M12,18.17L8.83,15L7.42,16.41L12,21L16.59,16.41L15.17,15M12,5.83L15.17,9L16.58,7.59L12,3L7.41,7.59L8.83,9L12,5.83Z';
// 󰍉 https://pictogrammers.com/library/mdi/icon/magnify/
$mdi-magnify: 'M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z';
// 󰄬 https://pictogrammers.com/library/mdi/icon/check/
$mdi-check: 'M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z';

